# ubot

./: .gitignore  Makefile  Makefile.am  README  TODO  autogen.sh  configure.ac
botweb/: settings.py  urls.py
botweb/media/: ubot
data/: Makefile.am  session.conf  ubot.conf  ubot_env.sh  ubot_env.sh.in
data/helpers/: Makefile.am
data/helpers/agenda/: Makefile.am  agenda.conf
data/helpers/bugtracker/: Makefile.am  bugtracker.conf
data/helpers/encyclopedia/: Makefile.am  encyclopedia.conf  lenny_sources.list  maverick_sources.list  natty_sources.list  oneiric_sources.list  precise_sources.list  sid_sources.list  squeeze_sources.list  wheezy_sources.list
data/helpers/isup/: Makefile.am  isup.conf
data/helpers/lart/: Makefile.am  lart.conf  larts
data/helpers/mess/: 42.txt  Makefile.am  ferengi.txt  mess.conf
data/helpers/noroot/: Makefile.am  noroot.conf
data/helpers/p2000/: Makefile.am  p2000.conf
data/helpers/pmrelay/: Makefile.am  pmrelay.conf
data/helpers/users/: Makefile.am  users.conf
data/lart/: larts
data/mess/: ball.txt  bofh.txt  hugs.txt  ralph.txt
doc/: Makefile  Makefile.am  api.rst  conf.py  configuring.rst  contributing.rst  copying.rst  dbusapi.rst  helpers.rst  index.rst  installing.rst  isup.rst  lart.rst  mess.rst  noroot.rst  p2000.rst  perl.rst  pmrelay.rst  python.rst  ruby.rst  running.rst  webadmin.rst
etc/: hello.conf.in  isup.conf.in  lart.conf.in  mess.conf.in  noroot.conf.in  p2000.conf.in  pmrelay.conf.in  session.conf.in  ubot.conf.in
etc/services/: isup.service.in  lart.service.in  noroot.service.in  p2000.service.in  pmrelay.service.in  ubot.service.in
helpers/: Makefile.am  agenda  bugtracker  encyclopedia  isup  lart  mess  noroot  p2000  pl_hello  pmrelay  py_hello  rb_hello  users
lib/: Makefile.am  ical.py
lib/ubot/: Makefile.am  Makefile.am.extra  autoconf.py.in  bot.py  channel.py  conf.py  exceptions.py  helper.py  irc.py  project_urls.py  rfc2812.py  util.py
lib/ubot/web/: Makefile.am  instaweb_settings.py
lib/ubot/web/control/: Makefile.am  admin.py  models.py  urls.py  views.py
lib/ubot/web/control/templates/: Makefile.am
lib/ubot/web/control/templates/registration/: Makefile.am  login.html
lib/ubot/web/control/templates/ubot/: Makefile.am  index.html
lib/ubot/web/control/templates/ubot/control/: Makefile.am  base.html  bot.html  index.html  no_adding.html
lib/ubot/web/encyclopedia/: Makefile.am  admin.py  models.py
lib/ubot/web/media/: Makefile.am  test.html  ubot.css  ubot.js
lib/ubot/web/media/redmond/: Makefile.am
lib/ubot/web/media/redmond/images/: Makefile.am
plib/: Makefile.am
plib/Ubot/: Helper.pm  Irc.pm  rfc2812.pm
rlib/: Makefile.am  ini.rb
rlib/ubot/: helper.rb  irc.rb  rfc2812.rb
