SUBDIRS = 
pkgpythondir=${pythondir}/ubot/web/media/redmond/images
pkgpython_PYTHON = ui-icons_f9bd01_256x240.png ui-icons_469bdd_256x240.png ui-bg_inset-hard_100_fcfdfd_1x100.png ui-bg_glass_95_fef1ec_1x400.png ui-icons_cd0a0a_256x240.png ui-bg_glass_75_d0e5f5_1x400.png ui-bg_gloss-wave_55_5c9ccc_500x100.png ui-bg_glass_85_dfeffc_1x400.png ui-icons_2e83ff_256x240.png ui-icons_6da8d5_256x240.png ui-bg_flat_0_aaaaaa_40x100.png ui-bg_inset-hard_100_f5f8f9_1x100.png ui-icons_217bc0_256x240.png ui-bg_flat_55_fbec88_40x100.png ui-icons_d8e7f3_256x240.png
